# Processor-Scheduler

./: README.md
DataPhase2-iotesting 2/: CMakeLists.txt  DataSimulator.sln  DataSimulator.vcxproj  DataSimulator.vcxproj.filters  EDF.cpp  EDF.h  LinkedList.h  Main.cpp  PrioQueue.h  PrioQueueNode.h  Process.cpp  Process.h  Processor.cpp  Processor.h  Queue.h  RoundRobin.cpp  RoundRobin.h  SJF.cpp  SJF.h  Schedueler.cpp  Schedueler.h  Stack.cpp  Stack.h  TEST1.txt  UI.cpp  UI.h  fcfs.cpp  fcfs.h  kill.cpp  kill.h  test2.txt  test3.txt
DataPhase2-iotesting 2/x64/Debug/: DataSimulator.exe.recipe  DataSimulator.vcxproj.FileListAbsolute.txt  vc143.idb
DataPhase2-iotesting 2/x64/Debug/DataSimulator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DataSimulator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
